<html>
<head><style type="text/css">body {font-size: smaller;}</style></head>
<body>
  <b>3.4.1</b>
  <ul>
    <li>Improved SDM importer to support files with dots instead of zeros.</li>
    <li>If a digit is not present in the board, clear selection and highlight notes (if any).</li>
    <li>French translation updated. Thanks @Tubix!</li>
    <li>German translation updated. Thanks @cweiske!</li>
  </ul>
  <b>3.4.0</b>
  <ul>
    <li>New menu option to sort puzzles by last played and play time. Thanks @fuentesj11!</li>
  </ul>
  <b>3.3.1</b>
  <ul>
    <li>Fix crash when using the new feature to automatically remove cell notes. Thanks @jlnordin!</li>
  </ul>
  <b>3.3.0</b>
  <ul>
    <li>Adds a new config option to skip titlescreen.</li>
    <li>Fix folder view to show sudoku previews with custom theme colors.</li>
    <li>Fix the crash when no cell was selected and you used the "hint" command.</li>
    <li>Thanks @jlnordin for all new features!</li>
  </ul>
  <b>3.2.0</b>
  <ul>
    <li>Adds a new config option to remove notes on number entry. Thanks @jlnordin!</li>
  </ul>
  <b>3.1.0</b>
  <ul>
    <li>Adds a menu option to undo to before mistake. Thanks @jlnordin!</li>
    <li>French translation updated. Thanks @Tubix!</li>
  </ul>
  <b>3.0.0</b>
  <ul>
    <li>New title screen with resume feature.</li>
    <li>Spectacular full App UI themes.</li>
    <li>New action buttons for undo and settings in game screen.</li>
    <li>New option for highlight notes that match a particular number when a cell is selected.</li>
    <li>Thanks @jlnordin for all new features!</li>
  </ul>
  <b>2.7.0</b>
  <ul>
    <li>Awesome Theme Preview. Thanks @jlnordin!</li>
    <li>Keep same values highlighted after empty cell selection. Thanks @ChrisLane!</li>
    <li>Hungarian translation. Thanks @madcrow!</li>
  </ul>
  <b>2.6.4</b>
  <ul><li>French translation updated. Thanks @Tubix!</li></ul>
  <b>2.6.3</b>
  <ul>