@@ -1,6 +1,10 @@
 <html>
 <head><style type="text/css">body {font-size: smaller;}</style></head>
 <body>
+  <b>?.?.?</b>
+  <ul>
+    <li>Added ability to generate boards of varying difficulty. Thanks @chrisawad</li>
+  </ul>
   <b>3.4.1</b>
   <ul>
     <li>Improved SDM importer to support files with dots instead of zeros.</li>
